Issue #XD-977 has been fixed.